--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Medilink</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+    <%- include('../partials/head.ejs') %>
   <body>
-      <div class="container">
-        <nav>
-            <h3> MediLink </h3>
-            <ul>
-                <li><a href="index.html" class="home-btn"><button>Home</button></a></li>
-                <li><a href="login.html"><button class="patient-btn">Patient</button></a></li>
-                <li><a href="doctorlogin.html"><button class="doctor-btn">Doctor</button></a></li>
-                <li><a href="contact.html"><button class="contact-btn">Contact Us</button></a></li>
-            </ul>
-        </nav>
-        <div class="indexcontainer">
-          <h2>MediLink Care</h2>
-          <p>Providing Instant Medical Linkages is the core of our Values.</p>
-        </div>
-      </div>
-      <!-- Header end  -->
+    <%- include('../partials/nav.ejs') %>  
+
        <!-- About us section -->
       <div class="about-container">
           <div class="img-container">
-            <img src="./images/cover-image.jpg" alt="" style="width: 80%; align-items: left;">
+            <img src="/images/cover-image.jpg" alt="" style="width: 80%; align-items: left;">
           </div>
           <div class="about-info">
             <h4>About MediLink</h4>
@@ -41,7 +24,7 @@
             <div class="service-container">
                 <div class="service-item">
                     <div class="service-img">
-                        <img src="./images/doctor_consultation.jpg">
+                        <img src="/images/doctor_consultation.jpg">
                     </div>
                     <div class="service-description">
                         <h2>General Practice</h2>
@@ -50,7 +33,7 @@
                 </div>
                 <div class="service-item">
                     <div class="service-img">
-                        <img src="./images/cardiology.jpg">
+                        <img src="/images/cardiology.jpg">
                     </div>
                     <div class="service-description">
                         <h2>Cardiology</h2>
@@ -59,7 +42,7 @@
                 </div>
                 <div class="service-item">
                     <div class="service-img">
-                        <img src="./images/prognosis.jpg">
+                        <img src="/images/prognosis.jpg">
                     </div>
                     <div class="service-description">
                         <h2>Neurology</h2>
@@ -68,7 +51,7 @@
                 </div>
                 <div class="service-item">
                     <div class="service-img">
-                        <img src="./images/gynaecology.jpg">
+                        <img src="/images/gynaecology.jpg">
                     </div>
                     <div class="service-description">
                         <h2>Gynaecology</h2>
@@ -77,7 +60,7 @@
                 </div>
                 <div class="service-item">
                     <div class="service-img">
-                        <img src="./images/oncology.jpg">
+                        <img src="/images/oncology.jpg">
                     </div>
                     <div class="service-description">
                         <h2>Oncology</h2>
@@ -86,7 +69,7 @@
                 </div>
                 <div class="service-item">
                     <div class="service-img">
-                        <img src="./images/paediatrics.jpg">
+                        <img src="/images/paediatrics.jpg">
                     </div>
                     <div class="service-description">
                         <h2>Pediatrics</h2>
@@ -95,7 +78,7 @@
                 </div>
                 <div class="service-item">
                   <div class="service-img">
-                      <img src="./images/dentistry.jpg">
+                      <img src="/images/dentistry.jpg">
                   </div>
                   <div class="service-description">
                       <h2>Dentistry</h2>
@@ -104,7 +87,7 @@
                 </div>
                 <div class="service-item">
                   <div class="service-img">
-                      <img src="./images/optical-image.jpg">
+                      <img src="/images/optical-image.jpg">
                   </div>
                   <div class="service-description">
                       <h2>Optician</h2>
@@ -120,7 +103,7 @@
     <div class="medical-provider">
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="./images/doctor_consultation.jpg">
+                <img src="/images/doctor_consultation.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Liu Yen</h4>
@@ -128,7 +111,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="./images/doctor_consultation.jpg">
+                <img src="/images/doctor_consultation.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Ali Mwazuri</h4>
@@ -136,7 +119,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="./images/doctor_consultation.jpg">
+                <img src="/images/doctor_consultation.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Wafula Kingston</h4>
@@ -152,7 +135,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="./images/doctor_consultation.jpg">
+                <img src="/images/doctor_consultation.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Kimani Munene</h4>
@@ -160,7 +143,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="./images/doctor_consultation.jpg">
+                <img src="/images/doctor_consultation.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Koech Tanui</h4>
@@ -170,7 +153,7 @@
     </section>
     <!-- the section ends here -->
      <!-- Why us section -->
-    <section class="more-info">
+    <!-- <section class="more-info">
         <div class="why-us">
             <h1>Why Choose Us</h1>
             <p>
@@ -187,52 +170,12 @@
             <p>100000+ subscribed patients</p>
             <p>125 connected Hospitals</p>
         </div>
-    </section>
+    </section> -->
       <!-- The swhy us section ends here -->
     <!-- Footer  -->
-    <footer>
-      <div class="footer-container">
-          <nav class="footer-nav">
-              <ul>
-                  <li><a href="#home">Home</a></li>
-                  <li><a href="patient.html">Patient</a></li>
-                  <li><a href="doctor.html">Doctor</a></li>
-                  <li><a href="contact.html">Contact Us</a></li>
-              </ul>
-          </nav>
-            <div class="office-hours">
-                <h4>Office Hours</h4>
-                <p>
-                    Mon - Fri: 8:00am - 5:00pm <br> Sartuday: 8:00 am - 12:00pm <br>
-                    Sunday: Online Services only <br>
-                    NOTE: After working hours you can still reach us via email or the website. <br>
-                    Our personnel are on standby
-                </p>
-            </div>
-            <div class="footer-address">
-                    <h4>Oracle Building</h4>
-                    <p>3rd Floor, East Wing</p>
-                    <p>Waiyaki Way</p>
-                    <p>Westlands</p> 
-                    <p>Nairobi, Nairobi County, 00100</p>
-                    <p>Kenya</p>
-            </div>
-            <div class="footer-contact">
-                <h4>Contact Us</h4>
-                <p>Email: info@medilinkcare.com</p>
-                <p>Phone: +123 456-789-123</p>
-                <p>Fax: +123 456-789-124</p>
-            </div>
-    </div>
-  <div class="footer-bottom">
-      <p>&copy; 2024 Instant MediCare. All Rights Reserved</p>
-      <div class="social-links">
-          <a href="www.twitter.com" target="_blank"><i class="fab fa-twitter"><fa-twitter></fa-twitter></i></a>
-          <a href="www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
-  </div>
-  </footer>
+    
+    <%- include('../partials/footer.ejs') %>
+
     <script src="script.js"></script>
   </body>
 </html>
