--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -145,6 +145,8 @@ nav button:hover {
   text-decoration: none;
 }
 
+/* responsive about */
+
 /* Services container */
 .service h1 {
   font-size: 36px;
