--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,11 @@
     <%- include('../partials/head.ejs') %>
   <body>
     <%- include('../partials/nav.ejs') %>  
-
+        <!-- landing page -->
+        <div class="indexcontainer">
+            <h2>MediLink Care</h2>
+            <p>Providing Instant Medical Linkages is the core of our Values.</p>
+          </div>
        <!-- About us section -->
       <div class="about-container">
           <div class="img-container">
