--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,8 +13,8 @@
                 <label for="login-password">Password: </label>
                 <input type="password" id="login-password" placeholder="password">
                 <br>
-                <button type="submit" class="btn">Login</button>
-                <p>Don't have an account? <a href="#" id="show-register">Register</a></p>
+                <button type="submit" class="btn"><a href="patient">Login</a></button>
+                <p>Don't have an account? <a href="register" id="show-register">Register</a></p>
             </form>
         </div>
     </div>
