--- a/views/loginDoctor.ejs
+++ b/views/loginDoctor.ejs
@@ -13,8 +13,8 @@
                 <label for="login-password">Password: </label>
                 <input type="password" id="login-password" placeholder="password">
                 <br>
-                <button type="submit" class="btn"><a href="doctor.html">Login</a></button>
-                <p>Don't have an account? <a href="#" id="show-register">Register</a></p>
+                <button type="submit" class="btn"><a href="doctor">Login</a></button>
+                <p>Don't have an account? <a href="registerDoctor" id="show-register">Register</a></p>
             </form>
         </div>
     </div>
