--- a/views/registerDoctor.ejs
+++ b/views/registerDoctor.ejs
@@ -25,9 +25,9 @@
             <input type="password" id="confirm-password">
 
             <button type="submit">Register</button>
-            <p>Already have an account? <a href="doctor.html" id="show-login">Login</a></p>
+            <p>Already have an account? <a href="doctor" id="show-login">Login</a></p>
         </form>
      </div>
-    <script src="script.js"></script>
+    <script src="./public/script.js"></script>
 </body>
 </html>
