--- a/views/register.ejs
+++ b/views/register.ejs
@@ -35,7 +35,7 @@
             <input type="password" id="confirm-password">
 
             <button type="submit">Register</button>
-            <p>Already have an account? <a href="#" id="show-login">Login</a></p>
+            <p>Already have an account? <a href="login" id="show-login">Login</a></p>
         </form>
     </div>
     <script src="script.js"></script>
