Starting to work

--- a/views/doctor.ejs
+++ b/views/doctor.ejs
@@ -18,9 +18,9 @@
                     <button id="upload-btn">Upload Picture</button>
                 </div>
                 <!-- patient data -->
-                <p><strong>Name:</strong> John Doe</p>
-                <p><strong>Specialization:</strong>Paeditrician</p>
-                <p><strong>Contact:</strong> johndoe@example.com</p>
+                <p><strong>Welcome Dr.</strong> Jane</p>
+                <p><strong>Specialization:</strong> Oncologost</p>
+                <p><strong>Contact:</strong> jane@example.com</p>
             </div>
             <div class="doctor-dashboard">
                 <div class="section">
