--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <div class="indexcontainer">
             <h2>MediLink Care</h2>
             <p>Providing Instant Medical Linkages is the core of our Values.</p>
-          </div>
+        </div>
        <!-- About us section -->
       <div class="about-container">
           <div class="img-container">
@@ -107,7 +107,7 @@
     <div class="medical-provider">
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="/images/doctor_consultation.jpg">
+                <img src="/images/doctor-7.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Liu Yen</h4>
@@ -115,7 +115,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="/images/doctor_consultation.jpg">
+                <img src="/images/doctor-6.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Ali Mwazuri</h4>
@@ -123,7 +123,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="/images/doctor_consultation.jpg">
+                <img src="/images/doctor-3.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Wafula Kingston</h4>
@@ -131,7 +131,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="./images/doctor_consultation.jpg">
+                <img src="./images/doctor-4.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Otieno Wa Mbiru</h4>
@@ -147,7 +147,7 @@
         </div>
         <div class="provider-item">
             <div class="doctor-img">
-                <img src="/images/doctor_consultation.jpg">
+                <img src="/images/doctor-2.jpg">
             </div>
             <div class="doctor-description">
                 <h4>Dr. Koech Tanui</h4>
