--- a/views/patient.ejs
+++ b/views/patient.ejs
@@ -44,11 +44,12 @@
                     <button id="upload-btn">Upload Picture</button>
                 </div>
                 <!-- patient data -->
-                <p><strong>Name:</strong> John Doe</p>
-                <p><strong>Age:</strong> 35</p>
-                <p><strong>Date of Birth:</strong> 10-10-1989</p>
+                <p><strong>Name:</strong> Johnp>
+                <p><strong>Age:</strong> Doe</p>
+                <p><strong>Date of Birth:</strong> 01-01-1989</p>
                 <p><strong>Gender:</strong> Male</p>
-                <p><strong>Contact:</strong> johndoe@example.com</p>
+                <p><strong>Contact:</strong> doe@example.com</p>
+                <button><a href="/auth/logout">Logout</a></button>
             </div>
         </div>
         </div>
